[workspace]
members =[
    "proxy",
    "proxy-io",
    "proxy-auth",
    "proxy-rules",
    "proxy-socks",
    "proxy-tunnel",
    "proxy-server"
]

default-members = ["proxy-server"]

[workspace.package]
authors = ["cgfork <jamesrily686@gmail.com>"]
edition = "2021"
homepage = "https://github.com/cgfork/lightway-rs"
repository = "https://github.com/cgfork/lightway-rs"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.4"
base64 = "0.13"
tokio = "1.21"
tokio-stream = "0.1"
tokio-util = "0.7"
tokio-native-tls = "0.3"
clap = "4.0"
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
bytes = "1"
hyper = "0.14"
http = "0.2"
headers = "0.3"
serde = "1.0"