[package]
name = "proxy-io"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy = { path = "../proxy" }
proxy-rules = { path = "../proxy-rules" }

log.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
tokio = { workspace = true, features = ["net", "time", "sync", "io-util"]}
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["io"] }
tokio-native-tls = { workspace = true, optional = true}
futures = { workspace = true }

[features]
default = ["tokio-native-tls"]