[package]
name = "proxy-rules"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7"
anyhow.workspace = true
serde = { workspace = true, features = ["std", "serde_derive", "rc"]}