[package]
name = "proxy-socks"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy = { path = "../proxy"}
proxy-io = { path = "../proxy-io" }
proxy-auth = { path = "../proxy-auth" }
proxy-rules = { path = "../proxy-rules" }

log.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
tokio = { workspace = true, features = ["net", "time", "sync", "io-util", "rt", "macros"]}
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["io"] }
futures = { workspace = true }