[package]
name = "netway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="1.8", features= ["full"] }
async-trait = "0.1"
thiserror = "1.0"
pin-project-lite = "0.2"
bytes = "1.0"
log = "0.4.14"
base64 = "0.13"

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = ["tokio-native-tls"]
tls = ["tokio-native-tls"]
no-tls = []
